[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["Ritoban Roy-Chowdhury <ritobanrc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = ""
aoc-runner-derive = ""
itertools = "0.8.2"
regex = "1.3.1"
num = "0.2.0"
